--- a/VisualCodeJam/VisualCodeJam/VisualCodeJam.csproj
+++ b/VisualCodeJam/VisualCodeJam/VisualCodeJam.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbstractSolver.cs" />
+    <Compile Include="CaseFileRunner.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
