--- a/VisualCodeJam/VisualCodeJam/VisualCodeJam.csproj
+++ b/VisualCodeJam/VisualCodeJam/VisualCodeJam.csproj
@@ -43,11 +43,16 @@
   <ItemGroup>
     <Compile Include="AbstractSolver.cs" />
     <Compile Include="CaseFileRunner.cs" />
+    <Compile Include="MinimumScalarProduct\MSPSolver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReverseWords\ReverseWordsSolver.cs" />
+    <Compile Include="TextCaseRunner.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="MinimumScalarProduct\A-large-practice.in" />
+    <None Include="MinimumScalarProduct\A-small-practice.in" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
