mushroom monster, and unit test case

--- a/VisualCodeJam/VisualCodeJam/VisualCodeJam.csproj
+++ b/VisualCodeJam/VisualCodeJam/VisualCodeJam.csproj
@@ -44,6 +44,7 @@
     <Compile Include="AbstractSolver.cs" />
     <Compile Include="CaseFileRunner.cs" />
     <Compile Include="MinimumScalarProduct\MSPSolver.cs" />
+    <Compile Include="MushroomMonster\MushroomMonsterSolver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReverseWords\ReverseWordsSolver.cs" />
@@ -53,6 +54,8 @@
     <None Include="App.config" />
     <None Include="MinimumScalarProduct\A-large-practice.in" />
     <None Include="MinimumScalarProduct\A-small-practice.in" />
+    <None Include="MushroomMonster\A-large-practice.in" />
+    <None Include="MushroomMonster\A-small-practice.in" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
