--- a/VisualCodeJam/VisualCodeJam/VisualCodeJam.csproj
+++ b/VisualCodeJam/VisualCodeJam/VisualCodeJam.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbstractRunner.cs" />
     <Compile Include="AbstractSolver.cs" />
     <Compile Include="CaseFileRunner.cs" />
     <Compile Include="MinimumScalarProduct\MSPSolver.cs" />
