--- a/VisualCodeJam/VisualCodeJam/VisualCodeJam.csproj
+++ b/VisualCodeJam/VisualCodeJam/VisualCodeJam.csproj
@@ -44,6 +44,7 @@
     <Compile Include="AbstractRunner.cs" />
     <Compile Include="AbstractSolver.cs" />
     <Compile Include="CaseFileRunner.cs" />
+    <Compile Include="HaircutSolver.cs" />
     <Compile Include="MinimumScalarProduct\MSPSolver.cs" />
     <Compile Include="MushroomMonster\MushroomMonsterSolver.cs" />
     <Compile Include="Program.cs" />
