--- a/VisualCodeJam/VisualCodeJam.Test/VisualCodeJam.Test.csproj
+++ b/VisualCodeJam/VisualCodeJam.Test/VisualCodeJam.Test.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="BaseUnitTestCaseRunner.cs" />
     <Compile Include="HaircutTest.cs" />
+    <Compile Include="LoggingTest.cs" />
     <Compile Include="MushroomMonsterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
