--- a/ProjectEuler/VisualEuler/VisualEuler/VisualEuler.csproj
+++ b/ProjectEuler/VisualEuler/VisualEuler/VisualEuler.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Euler.1-50.cs" />
     <Compile Include="Euler.cs" />
+    <Compile Include="Euler54poker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
@@ -58,6 +59,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="p022_names.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="p054_poker.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
